--- a/Astra/astra_v2/home/templates/home/base.html
+++ b/Astra/astra_v2/home/templates/home/base.html
@@ -35,7 +35,7 @@
                             <a href="#services" class="dropbtn">служебное</a>
                                 <div class="dropdown-content">
                                     <a href="{% url 'questions' %}">тесты</a>
-                                    <a href="#documents">документы</a>
+                                    <a href="{% url 'documents' %}">документы</a>
                                     <a href="#exports">выгрузка</a>
                                 </div>
                         </li>
