--- a/Astra/astra_v2/dashboard/templates/dashboard/create_question.html
+++ b/Astra/astra_v2/dashboard/templates/dashboard/create_question.html
@@ -1,88 +1,100 @@
-{% extends 'dashboard/base_dash.html' %}
+{% extends "home/base.html" %}
+{% load static %}
 
-{% block content %}
-<h1>Создать новый вопрос</h1>
-<form method="post" class="edit-form">
-    {% csrf_token %}
-    <div class="question-form">
-        {{ form.as_p }}
-    </div>
-    <h2>Ответы</h2>
-    <div class="answers-form" id="answers-form">
-        {{ formset.management_form }}
-        {% for form in formset %}
-            <div class="answer-form" id="answer-form-{{ forloop.counter }}">
-                {{ form.as_p }}
-                <p><a href="javascript:void(0);" class="delete-form" data-form-id="{{ form.prefix }}">Удалить</a></p>
-            </div>
-        {% endfor %}
-    </div>
-    <button type="button" id="add-answer-btn" class="btn btn-secondary">Добавить ответ</button>
-    <button type="submit" class="btn btn-primary">Сохранить</button>
-</form>
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/edit_question.css' %}">
+
 {% endblock %}
 
 {% block extra_js %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.full.min.js"></script>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
-<script>
-    $(document).ready(function() {
-        // Инициализация select2 для тегов
-        $('.django-select2').select2({
-            tags: true,
-            tokenSeparators: [',', ' '],
-            placeholder: 'Выберите или создайте метки',
-            allowClear: true,
-            width: '100%'  // Устанавливаем ширину на 100%
-        });
+<script src="{% static 'js/delete_answers_edit_qustions.js' %}"></script>
+<script src="{% static 'js/edit_question_name.js' %}"></script>
+<script src="{% static 'js/edit_answers_edit_question.js' %}"></script>
+<script src="{% static 'js/search_tags.js' %}"></script>
+<script src="{% static 'js/clear_tags_for_question.js' %}"></script>
 
-        // Обработчик удаления формы ответа
-        function addDeleteHandler(button) {
-            button.addEventListener('click', function() {
-                var formId = this.getAttribute('data-form-id');
-                document.querySelector(`[name="${formId}-DELETE"]`).checked = true;
-                this.closest('.answer-form').style.display = 'none';
-            });
-        }
+{% endblock %}
 
-        document.querySelectorAll('.delete-form').forEach(button => {
-            addDeleteHandler(button);
-        });
+{% block content %}
+<div class="edit-question-container">
+    <form method="post" id="edit-question-form">
+        {% csrf_token %}
+        <h2>Создание вопроса</h2>
+               <!-- Сообщения -->
+        {% if messages %}
+        <div class="messages">
+            {% for message in messages %}
+            <p class="message {{ message.tags }}">{{ message }}</p>
+            {% endfor %}
+        </div>
+        {% endif %} 
+        <!-- Текст вопроса -->
+        <div class="question-text">
+            <label for="question-text" class="editable-label">Вопрос:</label>
+            <span class="editable-text" contenteditable="true" id="question-text">{{ question.text }}</span>
+            <input type="hidden" name="question_text" id="hidden-question-text" value="{{ question.text }}">
+        </div>
 
-        // Динамическое добавление форм ответов
-        let formCount = {{ formset.total_form_count }};
-        $('#add-answer-btn').click(function() {
-            const newForm = $('#answers-form div.answer-form:first').clone(false);
-            newForm.find(':input').each(function() {
-                const name = $(this).attr('name').replace(/-\d+-/, `-${formCount}-`);
-                const id = `id_${name}`;
-                $(this).attr({ 'name': name, 'id': id }).val('').prop('checked', false);
-            });
-            newForm.find('label').each(function() {
-                const newFor = $(this).attr('for').replace(/-\d+-/, `-${formCount}-`);
-                $(this).attr('for', newFor);
-            });
-            newForm.find('.delete-form').attr('data-form-id', `form-${formCount}`);
-            $('#answers-form').append(newForm);
-            addDeleteHandler(newForm.find('.delete-form')[0]);
-            formCount++;
-            $('#id_form-TOTAL_FORMS').val(formCount);
-        });
+        <!-- Варианты ответов -->
+        <div class = "new-answer-btn"> 
+            <h3>Варианты ответов</h3>
+            <button type="button" id="add-answer-btn" class="btn-add-answer">Добавить ответ</button>
+        </div>    
+        <div class="answer-container">
+            {% for answer in answers %}
+            <div class="answer-item" id="answer-{{ answer.id }}">
+                <span class="editable-text answer-text" contenteditable="true" data-answer-id="{{ answer.id }}">
+                    {{ answer.text }}
+                </span>
+                <input type="hidden" name="answer_text_{{ answer.id }}" id="hidden-answer-text-{{ answer.id }}" value="{{ answer.text }}">
+                <label class="correct-label">
+                    <input type="checkbox" name="answer_correct_{{ answer.id }}" {% if answer.correct %}checked{% endif %}>
+                    Верный
+                </label>
+                <button type="button" class="btn-delete-answer" data-answer-id="{{ answer.id }}">Удалить</button>
+            </div>
+            {% endfor %}
+            <!-- Поля для новых ответов -->
+            <div id="new-answers-container">
+            </div>
+            
+            <input type="hidden" name="deleted_answers" id="deleted-answers">
+        </div>
 
-        // Функция для автоматического изменения высоты textarea
-        function autoResizeTextarea(textarea) {
-            textarea.style.height = 'auto'; // Сброс высоты для правильного расчета scrollHeight
-            textarea.style.height = Math.min(textarea.scrollHeight, textarea.style.minHeight.replace('px', '')) + 'px'; // Установка высоты по содержимому или минимальной высоте
-        }
 
-        // Применение функции ко всем textarea при загрузке страницы и при вводе текста
-        document.querySelectorAll('textarea').forEach(textarea => {
-            autoResizeTextarea(textarea);
-            textarea.addEventListener('input', function() {
-                autoResizeTextarea(this);
-            });
-        });
-    });
-</script>
+        <!-- Блок тегов -->
+<div class="tags-container">
+        <div class="tags-header">
+            <h2>Метки</h2>
+            <div class="tags-search-bar-container">
+                <input
+                    type="text"
+                    id="tags-search-bar"
+                    class="tags-search-bar"
+                    placeholder="🔍 Поиск по меткам..."
+                />
+                <button id="clearr-tags" class="clear-tags-button" type="button">Очистить</button>
+            </div>
+        </div>
+        <div id="tags-grid" class="tags-grid">
+            {% for tag in all_tags %}
+            <div class="tag-item">
+                    <label>
+                        <input type="checkbox" name="tags" value="{{ tag.id }}"
+                            {% if tag in question.tags.all %}checked{% endif %}>
+                        {{ tag.name }}
+                    </label>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+
+        <!-- Кнопки -->
+        <div class="buttons-container">
+            <button type="button" class="btn-cancel" onclick="window.history.back();">Отмена</button>
+            <button type="submit" class="btn-save">Сохранить</button>
+        </div>
+    </form>
+</div>
+
 {% endblock %}
