Доделать страницу документов_

--- a/Astra/astra_v2/home/templates/home/base.html
+++ b/Astra/astra_v2/home/templates/home/base.html
@@ -28,7 +28,7 @@
             <nav class="navbar">
                 <ul class="nav-list">
                     <li><a href="{% url 'about' %}">о нас</a></li>
-                    <li><a href="#test">тест</a></li>
+                    <!--<li><a href="#test">тест</a></li>-->
                     <li><a href="{% url 'profile' %}">профиль</a></li>
                     {% if has_service_access %}
                         <li class="dropdown">
