--- a/Astra/astra_v2/home/templates/home/base.html
+++ b/Astra/astra_v2/home/templates/home/base.html
@@ -36,7 +36,7 @@
                                 <div class="dropdown-content">
                                     <a href="{% url 'questions' %}">тесты</a>
                                     <a href="{% url 'documents' %}">документы</a>
-                                    <a href="#exports">выгрузка</a>
+                                    <a href="{% url 'export' %}">выгрузка</a>
                                 </div>
                         </li>
                     {% endif %}
